syntax = "proto3";

package shoppinglist;

option go_package = "./rpc/shoppinglist";

message UserShoppingList {
  uint64 id = 1;
  uint64 userId = 2;
  string description = 3;
  bool completed = 4;
}

message UserShoppingListEntry {
  uint64 shoppingListId = 1;
  uint64 productId = 2;
  uint64 count = 3;
  string note = 4;
  bool checked = 5;
}

service UserShoppingListService {
  // create method for adding a new shopping list
  rpc CreateUserShoppingList(CreateUserShoppingListRequest) returns (CreateUserShoppingListResponse);

  // read method for getting a specific shopping list
  rpc GetUserShoppingList(GetUserShoppingListRequest) returns (GetUserShoppingListResponse);

  // read method for getting all shopping lists for an user
  rpc GetAllUserShoppingLists(GetAllUserShoppingListsRequest) returns (GetAllUserShoppingListsResponse);

  // update method for updating a shopping list
  rpc UpdateUserShoppingList(UpdateUserShoppingListRequest) returns (UpdateUserShoppingListResponse);

  // delete method to get rid of a shopping list
  rpc DeleteUserShoppingList(DeleteUserShoppingListRequest) returns (DeleteUserShoppingListResponse);
}

service UserShoppingListEntryService {
  // create method for adding a new shopping list entry
  rpc CreateUserShoppingListEntry(CreateUserShoppingListEntryRequest) returns (CreateUserShoppingListEntryResponse);

  // read method for getting a specific shopping list entry
  rpc GetUserShoppingListEntry(GetUserShoppingListEntryRequest) returns (GetUserShoppingListEntryResponse);

  // read method for getting all shopping list entry for a specific shopping list
  rpc GetAllUserShoppingListEntries(GetAllUserShoppingListEntriesRequest) returns (GetAllUserShoppingListEntriesResponse);

  // update method for updating a shopping list
  rpc UpdateUserShoppingListEntry(UpdateUserShoppingListEntryRequest) returns (UpdateUserShoppingListEntryResponse);

  // delete method to get rid of a shopping list
  rpc DeleteUserShoppingListEntry(DeleteUserShoppingListEntryRequest) returns (DeleteUserShoppingListEntryResponse);
}

// Request- and Response-Messages for CreateUserShoppingList
message CreateUserShoppingListRequest {
  UserShoppingList userShoppingList = 1;
}

message CreateUserShoppingListResponse {
  UserShoppingList userShoppingList = 1;
}

// Request- and Response-Messages for GetUserShoppingList
message GetUserShoppingListRequest {
  uint64 Id = 1;
}

message GetUserShoppingListResponse {
  UserShoppingList userShoppingList = 1;
}

// Request- and Response-Messages for ListProducts
message GetAllUserShoppingListsRequest {
  uint64 userId = 1;
}

message GetAllUserShoppingListsResponse {
  repeated UserShoppingList userShoppingList = 1;
}

// Request- and Response-Messages for UpdateUserShoppingList
message UpdateUserShoppingListRequest {
  UserShoppingList userShoppingList = 1;
}

message UpdateUserShoppingListResponse {
  UserShoppingList userShoppingList = 1;
}

// Request- and Response-Messages for DeleteUserShoppingList
message DeleteUserShoppingListRequest {
  uint64 id = 1;
}

message DeleteUserShoppingListResponse {
}

// Request- and Response-Messages for CreateUserShoppingListEntry
message CreateUserShoppingListEntryRequest {
  UserShoppingListEntry userShoppingListEntry = 1;
}

message CreateUserShoppingListEntryResponse {
  UserShoppingListEntry userShoppingListEntry = 1;
}

// Request- and Response-Messages for GetUserShoppingListEntry
message GetUserShoppingListEntryRequest {
  uint64 shoppingListId = 1;
  uint64 productId = 2;
}

message GetUserShoppingListEntryResponse {
  UserShoppingListEntry userShoppingListEntry = 1;
}

// Request- and Response-Messages for GetAllUserShoppingListEntries
message GetAllUserShoppingListEntriesRequest {
  uint64 id = 1;
}

message GetAllUserShoppingListEntriesResponse {
  repeated UserShoppingListEntry userShoppingListEntries = 1;
}

// Request- and Response-Messages for UpdateUserShoppingList
message UpdateUserShoppingListEntryRequest {
  UserShoppingListEntry userShoppingListEntry = 1;
}

message UpdateUserShoppingListEntryResponse {
  UserShoppingListEntry userShoppingListEntry = 1;
}

// Request- and Response-Messages for DeleteUserShoppingList
message DeleteUserShoppingListEntryRequest {
  uint64 shoppingListId = 1;
  uint64 productId = 2;
}

message DeleteUserShoppingListEntryResponse {
}